# discord.c

./: CMakeLists.txt  LICENSE  README.md
bot/: CMakeLists.txt  client.c
lib/: CMakeLists.txt  discord.c  discord.h
